--- a/front/manifest.json
+++ b/front/manifest.json
@@ -1,11 +1,11 @@
 {
-    "h5": {
-        "devServer": {
-            "disableHostCheck": true
+    "h5" : {
+        "devServer" : {
+            "disableHostCheck" : true
         }
     },
     "name" : "front",
-    "appid" : "",
+    "appid" : "__UNI__014FC2F",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
